--- a/fabric/inventories/hosts.yml
+++ b/fabric/inventories/hosts.yml
@@ -1,6 +1,6 @@
 ---
 all:
-  hosts: # localhost connection parameters, used for storing configuration while transferring it between nodes
+  hosts:
     localhost:
       ansible_connection: local
   vars:
@@ -10,16 +10,16 @@ all:
     nodes:
       hosts:
         orderer.example.com:
-          node_roles: # Describes which containers will run on this node
+          node_roles:
             - root_orderer
             - orderer
             - peer
             - root_peer
             - explorer
-          org: mainorg # Organization name
-          ansible_host: 192.168.33.10 # Real ip address or domain name of the machine
-          ansible_user: vagrant # User with sudo access
-          ansible_private_key_file: /Users/a14846/workspace/src/github.com/nagaa052/sample_ansible/fabric/.vagrant/machines/default/virtualbox/private_key # Private key to identify ourselves
+          org: mainorg
+          ansible_host: 192.168.33.10
+          ansible_user: vagrant
+          ansible_private_key_file: /Users/a14846/workspace/src/github.com/nagaa052/sample_ansible/fabric/.vagrant/machines/default/virtualbox/private_key
         # # Same structure for any other nodes
         # one.example.com:
         #   node_roles:
